# flutter_gsl

./: Constants  Functions  README.md  build_gsl_android.sh  build_linux.sh  build_test.sh  build_windows.sh  dump  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
dump/: gsl_common.c  gsl_const.h
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
gsl-2.8/: Makefile  config.h  config.status  gsl-config  gsl-histogram  gsl-randist  gsl.pc  libgsl.la  libtool
gsl-2.8/.deps/: gsl-histogram.Po  gsl-randist.Po
gsl-2.8/.libs/: gsl-histogram  gsl-randist  libgsl.lai
gsl-2.8/blas/: Makefile
gsl-2.8/blas/.deps/: blas.Plo
gsl-2.8/block/: Makefile  test
gsl-2.8/block/.deps/: block.Plo  file.Plo  init.Plo  test.Po
gsl-2.8/bspline/: Makefile
gsl-2.8/bspline/.deps/: bspline.Plo  eval.Plo  gram.Plo  greville.Plo  inline.Plo  integ.Plo  interp.Plo  ls.Plo  old.Plo  test.Po
gsl-2.8/bspline/.libs/: test
gsl-2.8/bst/: Makefile  test
gsl-2.8/bst/.deps/: avl.Plo  bst.Plo  rb.Plo  test.Po  trav.Plo
gsl-2.8/cblas/: Makefile  libgslcblas.la  test
gsl-2.8/cblas/.deps/: caxpy.Plo  ccopy.Plo  cdotc_sub.Plo  cdotu_sub.Plo  cgbmv.Plo  cgemm.Plo  cgemv.Plo  cgerc.Plo  cgeru.Plo  chbmv.Plo  chemm.Plo  chemv.Plo  cher.Plo  cher2.Plo  cher2k.Plo  cherk.Plo  chpmv.Plo  chpr.Plo  chpr2.Plo  cscal.Plo  csscal.Plo  cswap.Plo  csymm.Plo  csyr2k.Plo  csyrk.Plo  ctbmv.Plo  ctbsv.Plo  ctpmv.Plo  ctpsv.Plo  ctrmm.Plo  ctrmv.Plo  ctrsm.Plo  ctrsv.Plo  dasum.Plo  daxpy.Plo  dcopy.Plo  ddot.Plo  dgbmv.Plo  dgemm.Plo  dgemv.Plo  (+148 more)
gsl-2.8/cblas/.libs/: libgslcblas.lai  libgslcblas.so.0.0.0  test
gsl-2.8/cdf/: Makefile  test
gsl-2.8/cdf/.deps/: beta.Plo  betainv.Plo  binomial.Plo  cauchy.Plo  cauchyinv.Plo  exponential.Plo  exponentialinv.Plo  fdist.Plo  fdistinv.Plo  flat.Plo  gamma.Plo  gammainv.Plo  gauss.Plo  gaussinv.Plo  geometric.Plo  gumbel1.Plo  gumbel1inv.Plo  gumbel2.Plo  gumbel2inv.Plo  hypergeometric.Plo  laplace.Plo  laplaceinv.Plo  logistic.Plo  logisticinv.Plo  lognormal.Plo  lognormalinv.Plo  nbinomial.Plo  pareto.Plo  paretoinv.Plo  pascal.Plo  poisson.Plo  rayleigh.Plo  rayleighinv.Plo  tdist.Plo  tdistinv.Plo  test.Po  weibull.Plo  weibullinv.Plo
gsl-2.8/cheb/: Makefile  test
gsl-2.8/cheb/.deps/: deriv.Plo  eval.Plo  init.Plo  integ.Plo  test.Po
gsl-2.8/combination/: Makefile  test
gsl-2.8/combination/.deps/: combination.Plo  file.Plo  init.Plo  inline.Plo  test.Po
gsl-2.8/complex/: Makefile  test  test_c11
gsl-2.8/complex/.deps/: math.Plo  test.Po  test_c11-test.Po
gsl-2.8/const/: Makefile  test
gsl-2.8/const/.deps/: test.Po
gsl-2.8/deriv/: Makefile  test
gsl-2.8/deriv/.deps/: deriv.Plo  test.Po
gsl-2.8/dht/: Makefile  test
gsl-2.8/dht/.deps/: dht.Plo  test.Po
gsl-2.8/diff/: Makefile  test
gsl-2.8/diff/.deps/: diff.Plo  test.Po
gsl-2.8/doc/: Makefile
gsl-2.8/doc/examples/: Makefile  blas  block  bspline_deriv  bspline_gram  bspline_interp  bspline_knots  bspline_lsbreak  bspline_lsend  bspline_lsorder  bspline_per  bspline_proj  cblas  cdf  cheb  combination  const  diff  dwt  eigen  eigen_nonsymm  fft  fftmr  fftreal  filt_edge  fitreg  fitreg2  fitting  fitting2  fitting3  gaussfilt  (+59 more)
gsl-2.8/eigen/: Makefile
gsl-2.8/err/: Makefile  test
gsl-2.8/fft/: Makefile  test
gsl-2.8/filter/: Makefile
gsl-2.8/fit/: Makefile  test
gsl-2.8/gsl/: Makefile
gsl-2.8/histogram/: Makefile  test
gsl-2.8/ieee-utils/: Makefile  test
gsl-2.8/integration/: Makefile
gsl-2.8/interpolation/: Makefile
gsl-2.8/linalg/: Makefile
gsl-2.8/matrix/: Makefile  test_static
gsl-2.8/min/: Makefile  test
gsl-2.8/monte/: Makefile  test
gsl-2.8/movstat/: Makefile
gsl-2.8/multifit/: Makefile
gsl-2.8/multifit_nlinear/: Makefile
gsl-2.8/multilarge/: Makefile
gsl-2.8/multilarge_nlinear/: Makefile
gsl-2.8/multimin/: Makefile
gsl-2.8/multiroots/: Makefile
gsl-2.8/multiset/: Makefile  test
gsl-2.8/ntuple/: Makefile  test
gsl-2.8/ode-initval/: Makefile
gsl-2.8/ode-initval2/: Makefile
gsl-2.8/permutation/: Makefile  test
gsl-2.8/poly/: Makefile  test
gsl-2.8/qrng/: Makefile  test
gsl-2.8/randist/: Makefile
gsl-2.8/rng/: Makefile  test
gsl-2.8/roots/: Makefile  test
gsl-2.8/rstat/: Makefile  test
gsl-2.8/siman/: Makefile  siman_tsp  test
gsl-2.8/sort/: Makefile
gsl-2.8/spblas/: Makefile
gsl-2.8/specfunc/: Makefile
gsl-2.8/splinalg/: Makefile
gsl-2.8/spmatrix/: Makefile
gsl-2.8/statistics/: Makefile  test
gsl-2.8/sum/: Makefile  test
gsl-2.8/sys/: Makefile  test
gsl-2.8/test/: Makefile
gsl-2.8/utils/: Makefile
gsl-2.8/vector/: Makefile
gsl-2.8/wavelet/: Makefile  test
ios/: flutter_gsl.podspec
lib/: flutter_gsl.dart  flutter_gsl_bindings_generated.dart
linux/: CMakeLists.txt
macos/: flutter_gsl.podspec
macos/Classes/: flutter_gsl.c
src/: CMakeLists.txt  flutter_gsl.c  flutter_gsl.h  gsl_block_char.h  gsl_block_complex_double.h  gsl_block_complex_float.h  gsl_block_complex_long_double.h  gsl_block_double.h  gsl_block_float.h  gsl_block_int.h  gsl_block_long.h  gsl_block_long_double.h  gsl_block_short.h  gsl_block_uchar.h  gsl_block_uint.h  gsl_block_ulong.h  gsl_block_ushort.h  gsl_bspline.h  gsl_bst.h  gsl_bst_avl.h  gsl_bst_rb.h  gsl_bst_types.h  gsl_cblas.h  gsl_chebyshev.h  gsl_combination.h  gsl_common.h  gsl_complex.h  gsl_const.c  gsl_const.h  gsl_dft_complex.h  gsl_dft_complex_float.h  gsl_dht.h  gsl_fft_complex.h  gsl_fft_complex_float.h  gsl_fft_halfcomplex.h  gsl_fft_halfcomplex_float.h  gsl_fft_real.h  gsl_fft_real_float.h  gsl_filter.h  gsl_fit.h  (+162 more)
src/dump/: gsl_common.c  gsl_special_func.h
windows/: CMakeLists.txt
(+855 files in other folders)
